--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <li><a class="dropdown-item" href="#">Something else here</a></li>
   </ul>
 </div>
-      <h8 class="logo"><img src="fash.png" width="40px" height="40px">Sheila Pink</h8>
+      <h6 class="logo"><img src="fash.png" width="40px" height="40px">Sheila Pink</h6>
       <ul class="nav justify-content-end">
         <li class="nav-item">
           <a class="nav-link active" aria-current="page"  id="text" href="#about">Home</a>
@@ -43,14 +43,14 @@
 
     <section>
       <h1>Sheila Pink</h1>
-      <img src="images/image1.jpg" alt="Sheila Pink" class="profile">
+      <img src="image1.jpg" alt="Sheila Pink" class="profile">
       <h2>Sustainable Fashion Enthusiast</h2>
       <p>Inspiring a sustainable and stylish lifestyle.</p>
 
       <div class="card mb-3" style="max-width: 540px;">
         <div class="row g-0">
           <div class="col-md-4">
-           <img src="images/face.png" alt="face" width="100px", height="100px">
+           <img src="face.png" alt="face" width="100px", height="100px">
           </div>
           <div class="col-md-8" id="bad">
             <div class="card-body">
@@ -66,7 +66,7 @@
       <h3 id="gallery"> <b>Gallery</b> </h3>
       <div class="card-group">
         <div class="card" id="bad">
-          <img src="images/image2.jpg" class="fashion">
+          <img src="image2.jpg" class="fashion">
           <div class="card-body">
             <h5 class="card-title"><b>Casual Wear</b> </h5>
             <p class="card-text">Smart casual includes items like blazers, sports jackets, dresses, sweaters, <br>
@@ -75,7 +75,7 @@
           </div>
         </div>
         <div class="card" id="bad">
-          <img src="images/image3.jpg" class="fashion">
+          <img src="image3.jpg" class="fashion">
           <div class="card-body">
             <h5 class="card-title"><b>Party Wear</b></h5>
             <p class="card-text">"Dress to impress, even if the only place you're going is your living room." <br>
@@ -85,7 +85,7 @@
           </div>
         </div>
         <div class="card" id="bad">
-          <img src="images/image4.jpg" class="fashion">
+          <img src="image4.jpg" class="fashion">
           <div class="card-body">
             <h5 class="card-title"><b>Culture</b></h5>
             <p class="card-text">The timeless charm of my outfit reflects my confidence and style.'' <br> 
